# bluez_native_comms

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml  publish.yml
example/: connect_device.dart  device_properties.dart  example_utils.dart  notify_characteristic.dart  pair_device.dart  read_characteristic.dart  read_descriptor.dart  scan_devices.dart  write_characteristic.dart
example/flutter_ble_scanner/: README.md  pubspec.yaml
example/flutter_ble_scanner/lib/: characteristic_screen.dart  device_screen.dart  main.dart  scanner_screen.dart
example/flutter_ble_scanner/linux/runner/: my_application.cc
interfaces/: org.bluez.Adapter1.xml  org.bluez.Device1.xml  org.bluez.GattCharacteristic1.xml  org.bluez.GattDescriptor1.xml  org.bluez.GattService1.xml  org.bluez.LEAdvertisingManager1.xml  org.freedesktop.DBus.ObjectManager.xml
lib/: bluez_native_comms.dart
lib/src/: bluez_adapter.dart  bluez_client.dart  bluez_device.dart  bluez_gatt_characteristic.dart  bluez_gatt_descriptor.dart  bluez_gatt_service.dart  bluez_manufacturer_data.dart  bluez_uuid.dart  enums.dart  exceptions.dart
lib/src/ffi/: bindings.dart  codec.dart  types.dart
lib/src/internal/: library_loader.dart
native/: CMakeLists.txt
native/include/: adapter_bridge.h  bluez_bridge.h  bluez_types.h  device_bridge.h  gatt_bridge.h  glaze_meta.h  object_manager.h
native/src/: adapter_bridge.cpp  bluez_bridge.cpp  device_bridge.cpp  gatt_bridge.cpp  object_manager.cpp
native/test/: CMakeLists.txt  test_adapter.cpp  test_gatt_notify.cpp  test_object_manager.cpp  test_types.cpp
scripts/: asan.sh  clang_format.sh  clang_tidy.sh  coverage.sh  generate_proxies.sh
test/: codec_test.dart  types_test.dart
